--- a/src/containers/PokedexContainer.scss
+++ b/src/containers/PokedexContainer.scss
@@ -11,7 +11,7 @@ $text-color: #ffffff;
 *,
 *::before,
 *::after {
-  box-sizing: border-box; 
+  box-sizing: border-box;
 }
 
 body {
@@ -25,16 +25,22 @@ body {
 .pokedex-container {
   padding: 20px;
   text-align: center;
-  overflow-x: hidden; 
+  overflow-x: hidden;
 
   .pokedex-logo {
-    width: 200px; 
-    margin-bottom: 20px;
+    width: 200px;
+    margin: 0 auto 20px;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-  
+
+    @media (max-width: 768px) {
+      width: 150px;
+    }
+
+    @media (max-width: 480px) {
+      width: 120px;
+    }
+  }
+
   h1 {
     color: $highlight-color;
     margin-bottom: 20px;
@@ -62,12 +68,11 @@ body {
     border-radius: 5px;
     background-color: $text-color;
     color: $secondary-color;
-    height: 40px; 
-    -webkit-appearance: none; 
-    -moz-appearance: none; 
-    appearance: none; 
-    
-    /* Add a custom down arrow icon */
+    height: 40px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+
     background-image: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12"%3E%3Cpath fill="none" stroke="%23B3A125" stroke-width="1.5" d="M2 4l4 4 4-4" /%3E%3C/svg%3E');
     background-repeat: no-repeat;
     background-position: right 10px center;
@@ -111,8 +116,8 @@ body {
     padding: 0;
     margin: 10px auto;
     max-width: 400px;
-    max-height: 300px; /* Limit the height of the suggestions list */
-    overflow-y: auto; /* Enable vertical scrolling */
+    max-height: 300px;
+    overflow-y: auto;
     border: 2px solid $neutral-color;
     border-radius: 5px;
     background-color: $text-color;
@@ -155,7 +160,7 @@ body {
     .abilities,
     .games {
       margin-top: 10px;
-      text-align: center; /* Center the text content */
+      text-align: center;
 
       h5 {
         color: $highlight-color;
@@ -170,7 +175,7 @@ body {
         display: flex;
         flex-wrap: wrap;
         gap: 10px;
-        justify-content: center; /* Center the list items */
+        justify-content: center;
       }
 
       li {
@@ -179,11 +184,11 @@ body {
         padding: 5px 10px;
         border-radius: 5px;
         font-size: 14px;
-        text-align: center; /* Center text inside each item */
+        text-align: center;
 
         &:hover {
           background-color: $highlight-color;
-          color: $accent-color; /* Change hover font color */
+          color: $accent-color;
         }
       }
     }
@@ -191,7 +196,6 @@ body {
 }
 
 // Responsive Styles
-
 @media (max-width: 768px) {
   .pokedex-container {
     padding: 15px;
