--- a/src/containers/pages/PokemonDetailsPage.scss
+++ b/src/containers/pages/PokemonDetailsPage.scss
@@ -55,12 +55,16 @@
     display: flex;
     justify-content: space-between;
     gap: 20px;
+    background-color: $primary-color-light;
+    border-radius: 25px;
 
     .image-column {
       flex: 0 0 50%; 
       display: flex;
       justify-content: center;
       align-items: center;
+      background-color: $accent-color-light;
+      border-radius: 25px;
 
       img {
         max-width: 100%;
