--- a/src/containers/variables.scss
+++ b/src/containers/variables.scss
@@ -14,6 +14,7 @@ $highlight-color: #FFDE00;
 $neutral-color: #B3A125;
 $background-color: $secondary-color;
 $text-color: #ffffff;
+$navbar-bg-color: $secondary-color; 
 
 // Lighter colours
 $primary-color-light: lighten($primary-color, 10%);
