--- a/src/containers/pages/RegionPage.css
+++ b/src/containers/pages/RegionPage.css
@@ -119,8 +119,7 @@
 .region-page .back-to-top {
   position: fixed;
   bottom: 20px;
-  left: 50%;
-  transform: translateX(-50%);
+  left: calc(50% - 30px);
   background-color: #3b4cca;
   color: #ffcb05;
   font-size: 1.5rem;
@@ -141,6 +140,14 @@
 .region-page .back-to-top.visible {
   opacity: 1;
   transform: scale(1);
+}
+@media screen and (max-width: 768px) {
+  .region-page .back-to-top {
+    bottom: 10px;
+    width: 50px;
+    height: 50px;
+    left: calc(50% - 25px);
+  }
 }
 
 /*# sourceMappingURL=RegionPage.css.map */
