--- a/src/containers/pages/RegionPage.scss
+++ b/src/containers/pages/RegionPage.scss
@@ -139,30 +139,36 @@
   /* Back to Top Button */
   .back-to-top {
     position: fixed;
-    bottom: 20px;  
-    left: 50%;     
-    transform: translateX(-50%); 
-    background-color: #3b4cca; 
-    color: #ffcb05; 
+    bottom: 20px;
+    left: calc(50% - 30px);  
+    background-color: #3b4cca;
+    color: #ffcb05;
     font-size: 1.5rem;
-    width: 60px;    
-    height: 60px;   
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
     border: none;
     cursor: pointer;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     transition: opacity 0.3s ease, transform 0.3s ease;
-    opacity: 0; 
-    transform: scale(0.8); 
+    opacity: 0;
+    transform: scale(0.8);
     z-index: 10;
 
     &:hover {
-      transform: scale(1); 
+      transform: scale(1);
     }
 
     &.visible {
-      opacity: 1; 
-      transform: scale(1); 
+      opacity: 1;
+      transform: scale(1);
+    }
+
+    @media screen and (max-width: 768px) {
+      bottom: 10px;
+      width: 50px;
+      height: 50px;
+      left: calc(50% - 25px);
     }
   }
 }
